# AI-in-the-loop_Auto_Machine_Learning

./: .env.example  .gitignore  README.md  metrics_val.json  prepare.py  program.md  pyproject.toml  requirements.txt  run_autonomous.py  train.py  visualize.py  yeast.csv
config/: base.yaml  search_space.yaml
src/: __init__.py  cli.py  config.py  orchestrator.py
src/data/: __init__.py  augmentation.py  loader.py
src/experiment/: __init__.py  registry.py  tracker.py
src/llm/: __init__.py  agent.py  parser.py  prompts.py
src/models/: cnn1d.py  ensemble.py  factory.py  mlp.py  transformer.py
src/training/: __init__.py  callbacks.py  evaluator.py  trainer.py
